2006-10-31  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/Makefile.am: link lcms with libgimpui.

	* plug-ins/common/lcms.c: added a confirmation dialog, work in
	progress...

2006-10-31  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mkgen.pl: add GTK_LIBS if ui is set, otherwise
	add GLIB_LIBS.

	* plug-ins/common/plugin-defs.pl: no need to define libdep any
	longer.

	* plug-ins/common/Makefile.am: regenerated. Identical except for
	two plug-ins that incorrectly linked with libgimpui.

2006-10-31  Michael Natterer  <mitch@gimp.org>

	* configure.in: add -Wmissing-declarations and -Wmissing-prototypes
	to CFLAGS if the compiler supports them. Still warns in some files
	but most stuff compiles cleanly after all the cleanups below.

2006-10-31  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/app.pl: declare all register_foo_procs() functions
	in internal_procs.h instead of internal_procs.c and include
	internal_procs.h from all foo_cmds.c files.

	* app/pdb/*_cmds.c
	* app/pdb/internal_procs.[ch]: regenerated.

2006-10-31  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/lib.pl: if a generated file in libgimp contains
	deprecated procedures, #undef GIMP_DISABLE_DEPRECATED and include
	its header explicitly, to make sure all deprecated procedures are
	declared properly. Removed $privatevars cruft.

	* libgimp/gimpbrushes_pdb.c
	* libgimp/gimpcolor_pdb.c
	* libgimp/gimpdrawable_pdb.c
	* libgimp/gimpgradients_pdb.c
	* libgimp/gimppalettes_pdb.c
	* libgimp/gimppaths_pdb.c
	* libgimp/gimppatterns_pdb.c
	* libgimp/gimptexttool_pdb.c
	* libgimp/gimptransformtools_pdb.c: regenerated.

2006-10-31  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/plug-ins/py-slice.py: string fixes.

2006-10-31  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/gradient.pdb: made private functions static.

	* app/pdb/gradient_cmds.c: regenerated.

2006-10-31  Michael Natterer  <mitch@gimp.org>

	* plug-ins/faxg3/Makefile.am